[tool.poetry]
name = "advent2020"
version = "0.1.0"
description = "Solutions to adventofcode 2020"
authors = ["Jon Hoffman <jonhoffman@gmail.com.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
